--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
   "main": "tailwind.config.js",
   "scripts": {
     "tailwind": "npx tailwindcss -i ./src/input.css -o ./build/css/style.css --watch",
-    "prettier": "npx prettier --write '**/*.html'"
+    "prettier": "npx prettier --write ./build/*.html"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "prettier-plugin-tailwind": "^2.2.12",
-    "prettier-plugin-tailwindcss": "^0.2.5"
+    "prettier-plugin-tailwindcss": "^0.2.6"
   }
 }
